# coop_work_pkg

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
behavior_tree/: navigate_to_pose_w_replanning_and_recovery.xml  planner_only.xml
coop_work_pkg/: drone_controller.py  drone_image_capture_server.py  image_processor.py  keyboard_reader.py  offboard_control.py  teleop_custom.py
images/: drone_image.pgm
launch/: bringup_launch.py  load_coop_robot.launch.py  navigation_launch.py  planner_only.launch.py  robot_state_publisher.launch.py  small_city.launch.py  spawn_turtlebot3.launch.py  turtlebot3_maze.launch.py
maps/: img_map.pgm  img_map.yaml  maze.pgm  maze.yaml
models/border/: model.config  model.sdf
models/border/materials/scripts/: repeated.material
models/maze/: model.config  model.sdf
models/maze_light/: model.config  model.sdf
models/sohwagi/: model.config  model.sdf
models/sohwagi/materials/scripts/: sohwagi.material
models/sohwagi/meshes/: sohwagi.dae
models/turtlebot3_waffle/: model.sdf
models/turtlebot3_waffle_depth/: model.config  model.sdf
models/turtlebot3_waffle_mk0/: model-1_4.sdf  model.config  model.sdf
models/turtlebot3_waffle_stereo/: model-1_4.sdf  model.config  model.sdf
models/typhoon_h480_ros/: model.config  typhoon_h480_ros.sdf
params/: nav2_params.yaml  nav2_params_theta_star.yaml  planner_only.yaml
urdf/: turtlebot3_waffle_depth.urdf  turtlebot3_waffle_mk0.urdf  turtlebot3_waffle_stereo.urdf
worlds/: border.world  maze.world  maze_light.world  maze_under_construct.world  office_small.world  small_city.world
